PyMaker/datas/object2/RawHTML/i16701/Python_DOC_referPages.when-installing-pil-i-get-a-syntaxerror.txt
<div class="post-text" itemprop="text">
<p>When I try and use <code>easy_install PIL</code> it will give me the error:</p>
<pre><code>    File "setup.py", line 182
print "--- using Tcl/Tk libraries at", TCL_ROOT
                                    ^
SyntaxError: invalid syntax
</code></pre>
<p>It is extremely annoying and I have tried installing it from a package as well. I've downloaded Imaging-1.1.7 and it gives the same error. I am trying to get the Image module in Python 3.4.1. I've tried installing Pillow 2.4 but it doesn't show up in the module list when I type <code>pydoc3.4 modules</code> and none of the applications even detect it's existence. Please help because I am getting desperate. I am on Mac OS X 10.8.4 with Python 3.4.1.</p>
</div>
<div class="post-text" itemprop="text">
<p>That syntax for <code>print</code> only exists in Python 2.x, where <code>print</code> is a statement.  However, it was removed entirely in Python 3.x when <code>print</code> <a href="https://docs.python.org/3/whatsnew/3.0.html#print-is-a-function" rel="nofollow noreferrer">became a function</a>.  </p>
<p>This means that your version of PIL is incompatible with Python 3.x.  So, you now have two options:</p>
<ol>
<li><p>Get a version of PIL that is compatible with Python 3.x. This <a href="https://stackoverflow.com/q/3896286/2555451">question</a> has more information on that.</p></li>
<li><p>Downgrade to Python 2.x.</p></li>
</ol>
</div>
<div class="post-text" itemprop="text">
<p>I have also tried <code>brew install PIL</code> and <code>pip install PIL</code> and I encountered the same issue, because I'm using python 3.4. But I just solved the problem today. This is thanks to Ned Deily's answer above, which i need to figure out first how to do since i'm not well experienced with pip stuffs.</p>
<p>So to do it, you need to head over to <a href="https://pypi.python.org/pypi/Pillow/" rel="nofollow">https://pypi.python.org/pypi/Pillow/</a> and click the latest version. (found version 2.6.1 at the time of this writing). You should see something like Pillow-(version).tar.gz (found Pillow-2.6.1.tar.gz). Just right click it and <strong>copy link address</strong> if you're using chrome browser and type in the following in your terminal.</p>
<pre><code>pip install https://pypi.python.org/packages/source/P/Pillow/Pillow-2.6.1.tar.gz#md5=4b77fb0c81bbe0c8bf90c6eea960e091
</code></pre>
<p>that should do the trick</p>
</div>
<span class="comment-copy"><code>Pillow</code> (<a href="https://pypi.python.org/pypi/Pillow/" rel="nofollow noreferrer">pypi.python.org/pypi/Pillow</a>) is your friend.</span>
<span class="comment-copy">how do i install a pillow for my mac os yosemite? i'm seeing .whl links but i don't know how to install them</span>
<span class="comment-copy">@bonbon.langes - I'm sorry sir, but my primary operating system is Windows.  You should ask a new question about your problem, stating clearly what you want as well as what you have already tried.  I only answered this question because the problem was obvious, not because I am an experienced Mac user :)</span>
<span class="comment-copy">ah alright no worries. i should have tagged Ned. but the question is also tagged as under mac osx so my question is still valid</span>
